--- a/msdt-1/pyproject.toml
+++ b/msdt-1/pyproject.toml
@@ -11,7 +11,13 @@ pyqt5 = "5.13.0"
 pyqt5-stubs = ">=5.13,<6.0"
 pymorphy3 = "^2.0.2"
 
+[tool.poetry.group.dev.dependencies]
+black = "24.8.0"
+
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+exclude = "ui_wordmaker.py"
