--- a/msdt-1/pyproject.toml
+++ b/msdt-1/pyproject.toml
@@ -13,7 +13,7 @@ pymorphy3 = "^2.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.8.0"
-
+mypy = "1.11.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -21,3 +21,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 exclude = "ui_wordmaker.py"
+
+[tool.mypy]
+ignore_missing_imports = true
