--- a/msdt-1/pyproject.toml
+++ b/msdt-1/pyproject.toml
@@ -14,6 +14,8 @@ pymorphy3 = "^2.0.2"
 [tool.poetry.group.dev.dependencies]
 black = "24.8.0"
 mypy = "1.11.2"
+isort = "^5.13.2"
+
 
 [build-system]
 requires = ["poetry-core"]
