--- a/msdt-5/.github/workflows/unit-testing.yml
+++ b/msdt-5/.github/workflows/unit-testing.yml
@@ -28,11 +28,16 @@ jobs:
         python-version: "3.10"
         cache: 'pip'
 
+    - name: Install system dependencies for pygame
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pygame pytest coverage  
+        pip install pygame pytest coverage
 
     - name: Run tests
       run: |
