--- a/msdt-5/requirements.txt
+++ b/msdt-5/requirements.txt
@@ -1,5 +1,11 @@
+certifi==2024.8.30
+charset-normalizer==3.4.0
 colorama==0.4.6
+idna==3.10
 iniconfig==2.0.0
 packaging==24.2
 pluggy==1.5.0
 pytest==8.3.4
+pytest-mock==3.14.0
+requests==2.32.3
+urllib3==2.2.3
