Updated unit-test action and increase coverage in test_employee.py

--- a/msdt-5/.github/workflows/unit-testing.yml
+++ b/msdt-5/.github/workflows/unit-testing.yml
@@ -12,7 +12,7 @@ on:
   pull_request_target:
     types: [assigned, opened, synchronize, reopened]
     branches:
-      - 'main'
+      - 'lab5'
     paths:
       - 'msdt-5/**'
 
