--- a/msdt-3/.github/workflows/result-check.yml
+++ b/msdt-3/.github/workflows/result-check.yml
@@ -30,7 +30,7 @@ jobs:
         name: acquiring your results
         id: your_results
         with:
-         file_path: "msdt-3/result.json"       
+         path: "msdt-3/result.json"       
       - name: displaying your results
         run: |
           echo "your variant: ${{steps.your_results.outputs.variant}}"
