--- a/msdt-5/.github/workflows/unit-testing.yml
+++ b/msdt-5/.github/workflows/unit-testing.yml
@@ -42,6 +42,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pytest
         pip install coverage
+        pip install loguru
              
     - name: Run tests
       run: |
